--- a/src/components/RoleOverview/style.scss
+++ b/src/components/RoleOverview/style.scss
@@ -168,25 +168,23 @@
     $icon-width: 120px;
 
     &__header {
+      position: relative;
       align-items: flex-start;
       align-items: center;
       flex-direction: row;
       justify-content: space-between;
       padding: 40px;
-      background-image: url('../../assets/background/roles-page-corner-left.png'),
+      background-image:
+        url('../../assets/background/roles-page-corner-left.png'),
         url('../../assets/background/roles-page-corner-right.png');
       background-position: bottom left, top right;
-      position: relative;
       background-repeat: no-repeat;
 
       &-container {
         display: flex;
         align-items: center;
+        width: 100%;
       }
-    }
-
-    &__header-container {
-      width: 100%;
     }
 
     &__title {
