--- a/src/components/Analytics/style.scss
+++ b/src/components/Analytics/style.scss
@@ -1,12 +1,33 @@
 @import '../../styles/_main';
 
 .Analytics {
+  $r: &;
   @extend %container;
 
   position: relative;
   width: 100%;
   background-color: $c_catskill_white;
   border-radius: $border-radius;
+
+  &--large {
+    max-width: initial;
+
+    #{$r} {
+      &__content {
+        position: static;
+        display: flex;
+        justify-content: center;
+        padding: 40px 0 60px;
+        transform: none;
+      }
+
+      &__container {
+        @extend %container;
+
+        padding: 20px 32px 60px;
+      }
+    }
+  }
 
   &__container {
     display: flex;
@@ -15,7 +36,7 @@
     border-radius: $border-radius;
 
     & > * {
-      flex-basis: calc(100% / 2);
+      flex-basis: 100%;
     }
   }
 
@@ -25,6 +46,14 @@
     left: 0;
     width: 100%;
     transform: translate(0, 50%);
+  }
+
+  @media #{media-min-width(450px)} {
+    &__container {
+      & > * {
+        flex-basis: calc(100% / 2);
+      }
+    }
   }
 
   @media #{$screen-sm} {
@@ -54,6 +83,18 @@
     &__container {
       & > * {
         flex-basis: calc(100% / 4);
+      }
+    }
+  }
+
+  @media #{$screen-lg} {
+    &--large {
+      padding: 70px 0 90px;
+
+      #{$r} {
+        &__container {
+          padding: 20px 32px 60px;
+        }
       }
     }
   }
