Refactor brand story items to separate components

--- a/src/components/ActionButton/style.scss
+++ b/src/components/ActionButton/style.scss
@@ -11,7 +11,9 @@ $size: 80px;
   cursor: pointer;
 
   &--on-black {
-    color: $c_white #{$r}__button {
+    color: $c_white;
+
+    #{$r}__button {
       background-color: $c_blue-ribbon;
     }
   }
