--- a/src/components/TestnetItem/style.scss
+++ b/src/components/TestnetItem/style.scss
@@ -5,11 +5,15 @@
 
   margin-bottom: 20px;
 
-  &__image {
+  &__image-container {
     width: 100%;
     height: 100%;
     max-width: 450px;
     margin-bottom: 32px;
+  }
+
+  &__image {
+    width: 100%;
   }
 
   &__container {
@@ -44,14 +48,26 @@
   }
 
   @media #{$screen-md} {
-    width: 70%;
+    width: 100%;
+    max-width: initial;
 
-    &__image {
+    &__image-container {
+      width: 50%;
+      max-width: initial;
       margin-right: 60px;
       margin-bottom: 0;
     }
 
+    &__image {
+      width: 80%;
+    }
+
+    &__container {
+      width: 50%;
+    }
+
     &__content {
+      max-width: 390px;
       font-size: 20px;
       line-height: 28px;
       text-align: left;
