--- a/src/components/Analytics/style.scss
+++ b/src/components/Analytics/style.scss
@@ -48,6 +48,14 @@
     transform: translate(0, 50%);
   }
 
+  &__title {
+    padding: 40px 0 0;
+    font-size: 30px;
+    line-height: 38px;
+    color: $c_blue-ribbon;
+    text-align: center;
+  }
+
   @media #{media-min-width(450px)} {
     &__container {
       & > * {
@@ -84,6 +92,11 @@
       & > * {
         flex-basis: calc(100% / 4);
       }
+    }
+
+    &__title {
+      font-size: 40px;
+      line-height: 45px;
     }
   }
 
