--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -3,7 +3,9 @@
 .Button {
   $_r: &;
 
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 0 32px;
   font-family: $font-primary;
@@ -20,6 +22,12 @@
   &:active {
     text-decoration: none;
     background-color: $c_han_purple;
+  }
+
+  svg,
+  img {
+    max-height: 18px;
+    margin-right: 16px;
   }
 
   &--reversed {
