--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,12 @@
 
 @font-face {
   font-family: Inter;
+  font-weight: 300;
+  src: url('../assets/fonts/Inter-ExtraLight-BETA.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Inter;
   src: url('../assets/fonts/Inter-Regular.ttf') format('truetype');
 }
 
