--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -132,23 +132,30 @@
   }
 
   &__slide {
+    $_transition: .3s ease;
+
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
+    border: 1px solid transparent;
+    transition: color $_transition, background $_transition, border-color $_transition;
 
     &--white {
-      color: $c_black;
+      color: $c_blue-ribbon;
       background: $c_white;
     }
 
     &--blue {
+      color: $c_white;
       background: $c_blue-ribbon;
     }
 
     &--black {
+      color: $c_white;
       background: $c_black;
+      border: 1px solid $c_ebony-clay;
     }
   }
 }
