Add Typography section

--- a/src/styles/common/_colors.scss
+++ b/src/styles/common/_colors.scss
@@ -8,6 +8,7 @@ $c_grayc-chateau: #a7aeb7;
 
 $c_blue-ribbon: #4038ff;
 $c_heather: #c3cbd6;
+$c_light-blue: #96a4ff;
 $c_light-purple: #536dff;
 $c_han_purple: #322af1;
 $c_ebony-clay: #1f252e;
