--- a/src/components/BrandGuides/GuidesSection/style.scss
+++ b/src/components/BrandGuides/GuidesSection/style.scss
@@ -100,6 +100,10 @@
     line-height: 30px;
     color: inherit;
 
+    &--bold {
+      font-weight: bold;
+    }
+
     &--h1 {
       font-size: 60px;
       line-height: 70px;
